[gd_scene load_steps=6 format=3 uid="uid://us4733pbf80f"]

[ext_resource type="Texture2D" uid="uid://bkjpl134ahvvk" path="res://scenes/environment/box/box.png" id="1_h8e2c"]
[ext_resource type="Script" path="res://scenes/environment/box/box.gd" id="1_hklah"]
[ext_resource type="Texture2D" uid="uid://br2f78ky4pp8r" path="res://images/A_Key.png" id="3_vebps"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_grcse"]
rough = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ea6bs"]
size = Vector2(16, 17)

[node name="Box" type="RigidBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 7
physics_material_override = SubResource("PhysicsMaterial_grcse")
script = ExtResource("1_hklah")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_h8e2c")

[node name="Interact" type="Area2D" parent="." groups=["box"]]
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ea6bs")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="InteractHint" type="TextureRect" parent="."]
visible = false
texture_filter = 1
offset_left = -4.0
offset_top = -20.86
offset_right = 4.0
offset_bottom = -12.86
texture = ExtResource("3_vebps")
stretch_mode = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, 7, 8, -7, 8, -8, 8)

[connection signal="area_entered" from="Interact" to="." method="_on_interact_area_entered"]
[connection signal="area_exited" from="Interact" to="." method="_on_interact_area_exited"]
